2011-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* shell.el (shell-completion-vars): Set pcomplete-termination-string
	according to comint-completion-addsuffix.

	* pcomplete.el: Convert to lexical binding and fix bug#8819.
	(pcomplete-suffix-list): Mark as obsolete.
	(pcomplete-completions-at-point): Capture pcomplete-norm-func and
	pcomplete-seen in the closure.
	(pcomplete-comint-setup): Setup completion-at-point as well.
	(pcomplete--entries): New function.
	(pcomplete--env-regexp): New var.
	(pcomplete-entries): Rewrite to work with partial-completion and
	without relying on pcomplete-suffix-list.
	(pcomplete-pare-list): Remove, unused.

2011-06-17  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-alist): Set pop-up-window-min-height
	and pop-up-window-min-width in default value.  Reported by
	Thierry Volpiatto <thierry.volpiatto@gmail.com>.  New specifier
	other-window-means-other-frame.
	(display-buffer-macro-specifiers): Comment out entry for
	other-window specifier.
	(display-buffer-other-window-means-other-frame): New function.
	(display-buffer-normalize-specifiers-1): New arguments
	buffer-name and label.  Treat other-window case specially.
	(display-buffer-normalize-specifiers-2): Treat other-window case
	specially.
	(display-buffer-normalize-specifiers-3): New function.
	(display-buffer-normalize-specifiers): Call
	display-buffer-normalize-specifiers-3.

2011-06-17  Martin Rudalics  <rudalics@gmx.at>

	* window.el (same-window-p): Fix two typos introduced when
	adding with-no-warnings.
	(display-buffer-normalize-specifiers-1): Don't check
	pop-up-frames for 'unset initialization.
	(display-buffer-normalize-specifiers-2): Major rewrite using
	special-display-p and same-window-p (Bug#8851) and (Bug#8856).
	(pop-up-frames, display-buffer-reuse-frames)
	(display-buffer-mark-dedicated): Don't initialize to 'unset.
	Suggested by David Engster <deng@randomsample.de>.
	(even-window-heights): Initialize to 'unset.