@@ -1,3 +1,15 @@
+2011-06-18  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (display-buffer-default-specifiers): Remove
+	pop-up-frame.  Add pop-up-window-min-height,
+	pop-up-window-min-width, and another reuse-window specifier
+	(Bug#8882).  Reported by Dan Nicolaescu <dann@gnu.org>.
+	(display-buffer-normalize-specifiers-2): Handle
+	split-height-threshold and split-width-threshold also when
+	pop-up-windows is unset.  Add a reuse-window specifier for the
+	case popping up a new window fails.
+	(special-display-popup-frame): Remove double quoting.
+
 2011-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* shell.el (shell-completion-vars): Set pcomplete-termination-string
